lang/Lang/Par.y
-- -*- haskell -*- File generated by the BNF Converter (bnfc 2.9.6.3).

-- Parser definition for use with Happy
{
{-# OPTIONS_GHC -Wno-incomplete-patterns -Wno-overlapping-patterns #-}
{-# LANGUAGE PatternSynonyms #-}

module Lang.Par
  ( happyError
  , myLexer
  , pGen
  ) where

import Prelude

import qualified Lang.Abs
import Lang.Lex

}

%name pGen Gen
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '('      { PT _ (TS _ 1)  }
  ')'      { PT _ (TS _ 2)  }
  '+'      { PT _ (TS _ 3)  }
  ','      { PT _ (TS _ 4)  }
  '->'     { PT _ (TS _ 5)  }
  '.'      { PT _ (TS _ 6)  }
  '/\\'    { PT _ (TS _ 7)  }
  ':'      { PT _ (TS _ 8)  }
  '::'     { PT _ (TS _ 9)  }
  ';'      { PT _ (TS _ 10) }
  '<'      { PT _ (TS _ 11) }
  '='      { PT _ (TS _ 12) }
  '=>'     { PT _ (TS _ 13) }
  '>'      { PT _ (TS _ 14) }
  'Arr'    { PT _ (TS _ 15) }
  'Bool'   { PT _ (TS _ 16) }
  'Dist'   { PT _ (TS _ 17) }
  'False'  { PT _ (TS _ 18) }
  'Nat'    { PT _ (TS _ 19) }
  'S'      { PT _ (TS _ 20) }
  'True'   { PT _ (TS _ 21) }
  'Z'      { PT _ (TS _ 22) }
  '['      { PT _ (TS _ 23) }
  '\\'     { PT _ (TS _ 24) }
  ']'      { PT _ (TS _ 25) }
  'case'   { PT _ (TS _ 26) }
  'distr'  { PT _ (TS _ 27) }
  'else'   { PT _ (TS _ 28) }
  'filter' { PT _ (TS _ 29) }
  'forall' { PT _ (TS _ 30) }
  'if'     { PT _ (TS _ 31) }
  'in'     { PT _ (TS _ 32) }
  'inj'    { PT _ (TS _ 33) }
  'iter'   { PT _ (TS _ 34) }
  'of'     { PT _ (TS _ 35) }
  'return' { PT _ (TS _ 36) }
  'then'   { PT _ (TS _ 37) }
  '{'      { PT _ (TS _ 38) }
  '|'      { PT _ (TS _ 39) }
  '}'      { PT _ (TS _ 40) }
  '~'      { PT _ (TS _ 41) }
  L_Ident  { PT _ (TV $$)   }

%%

Ident :: { Lang.Abs.Ident }
Ident  : L_Ident { Lang.Abs.Ident $1 }

Gen :: { Lang.Abs.Gen }
Gen : PExp { Lang.Abs.Gen $1 }

PExp :: { Lang.Abs.PExp }
PExp
  : Ident '=' PExp1 'in' PExp { Lang.Abs.PLet $1 $3 $5 }
  | Ident '~' PExp3 'in' PExp { Lang.Abs.PBind $1 $3 $5 }
  | 'filter' PExp6 'in' PExp { Lang.Abs.PGuard $2 $4 }
  | PExp1 { $1 }

PExp1 :: { Lang.Abs.PExp }
PExp1
  : 'if' PExp6 'then' PExp1 'else' PExp1 { Lang.Abs.PIf $2 $4 $6 }
  | PExp2 { $1 }

PExp2 :: { Lang.Abs.PExp }
PExp2
  : '\\' Ident '::' PTyp '->' PExp1 { Lang.Abs.PLambda $2 $4 $6 }
  | '/\\' Ident '=>' PExp1 { Lang.Abs.PLambdaT $2 $4 }
  | PExp2 '+' PExp3 { Lang.Abs.PPlus $1 $3 }
  | PExp3 { $1 }

PExp3 :: { Lang.Abs.PExp }
PExp3
  : 'return' PExp4 { Lang.Abs.PReturn $2 }
  | 'distr' PTyp { Lang.Abs.PDistr $2 }
  | 'distr' '(' PTyp ')' { Lang.Abs.PDistr $3 }
  | PExp4 { $1 }

PExp5 :: { Lang.Abs.PExp }
PExp5
  : PExp5 '.' Ident { Lang.Abs.PProj $1 $3 }
  | PExp6 '[' PTyp ']' { Lang.Abs.PAppT $1 $3 }
  | PExp6 { $1 }

PExp6 :: { Lang.Abs.PExp }
PExp6
  : '<' ListPLabExp '>' { Lang.Abs.PProd $2 }
  | 'inj' PTyp '{' PLabExp '}' { Lang.Abs.PSum $2 $4 }
  | 'case' PExp 'of' PTyp '{' ListPCaseExp '}' { Lang.Abs.PCase $2 $4 $6 }
  | 'iter' '{' PExp ';' Ident ';' PExp '}' '(' PExp7 ')' { Lang.Abs.PRec $3 $5 $7 $10 }
  | PExp6 PExp { Lang.Abs.PApp $1 $2 }
  | Ident { Lang.Abs.PVar $1 }
  | PExp7 { $1 }

PExp7 :: { Lang.Abs.PExp }
PExp7
  : 'True' { Lang.Abs.PBoolT }
  | 'False' { Lang.Abs.PBoolF }
  | 'Z' { Lang.Abs.PZero }
  | 'S' '(' PExp ')' { Lang.Abs.PSucc $3 }
  | '(' PExp ')' { $2 }

PExp4 :: { Lang.Abs.PExp }
PExp4 : PExp5 { $1 }

PLabExp :: { Lang.Abs.PLabExp }
PLabExp : Ident ':' PExp { Lang.Abs.PLabExp $1 $3 }

ListPLabExp :: { [Lang.Abs.PLabExp] }
ListPLabExp
  : {- empty -} { [] }
  | PLabExp { (:[]) $1 }
  | PLabExp ',' ListPLabExp { (:) $1 $3 }

PCaseExp :: { Lang.Abs.PCaseExp }
PCaseExp : Ident Ident '->' PExp { Lang.Abs.PCaseExp $1 $2 $4 }

ListPCaseExp :: { [Lang.Abs.PCaseExp] }
ListPCaseExp
  : {- empty -} { [] }
  | PCaseExp { (:[]) $1 }
  | PCaseExp ',' ListPCaseExp { (:) $1 $3 }

PTyp :: { Lang.Abs.PTyp }
PTyp
  : 'Bool' { Lang.Abs.PTBool }
  | 'Nat' { Lang.Abs.PTNat }
  | Ident { Lang.Abs.PTVar $1 }
  | 'Arr' PTyp PTyp { Lang.Abs.PTArr $2 $3 }
  | 'Dist' PTyp { Lang.Abs.PTDist $2 }
  | '<' ListTMember '>' { Lang.Abs.PTProd $2 }
  | '{' ListTMember1 '}' { Lang.Abs.PTSum $2 }
  | 'forall' Ident '.' PTyp { Lang.Abs.PTAll $2 $4 }

TMember :: { Lang.Abs.TMember }
TMember : Ident ':' PTyp { Lang.Abs.TMember $1 $3 }

ListTMember :: { [Lang.Abs.TMember] }
ListTMember
  : {- empty -} { [] }
  | TMember { (:[]) $1 }
  | TMember ',' ListTMember { (:) $1 $3 }

TMember1 :: { Lang.Abs.TMember }
TMember1 : Ident ':' PTyp { Lang.Abs.TMember1 $1 $3 }

ListTMember1 :: { [Lang.Abs.TMember] }
ListTMember1
  : TMember1 { (:[]) $1 } | TMember1 '|' ListTMember1 { (:) $1 $3 }

{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

}
