lang/Lang/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Lang/Par.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pGen -> Gen                                 (0)
	Ident -> L_Ident                                   (1)
	Gen -> ListPExp                                    (2)
	ListPExp -> PExp                                   (3)
	ListPExp -> PExp ';' ListPExp                      (4)
	PExp -> Ident '=' PExp1 'in' PExp                  (5)
	PExp -> Ident '~' PExp1 'in' PExp                  (6)
	PExp -> 'if' PExp 'then' PExp 'else' PExp          (7)
	PExp -> 'filter' PExp6 'in' PExp                   (8)
	PExp -> PExp1                                      (9)
	PExp1 -> '\\' Ident '->' PExp1                     (10)
	PExp1 -> '/\\' Ident '=>' PExp1                    (11)
	PExp1 -> PExp2                                     (12)
	PExp2 -> PExp2 '+' PExp3                           (13)
	PExp2 -> PExp3                                     (14)
	PExp3 -> 'return' PExp4                            (15)
	PExp3 -> 'distr' PTyp                              (16)
	PExp3 -> PExp4                                     (17)
	PExp5 -> PExp5 '.' Ident                           (18)
	PExp5 -> PExp6 '[' PTyp ']'                        (19)
	PExp5 -> PExp6                                     (20)
	PExp6 -> '<' ListPLabExp '>'                       (21)
	PExp6 -> 'inj' PTyp '{' PLabExp '}'                (22)
	PExp6 -> 'case' PExp 'of' PTyp '{' ListPCaseExp '}'   (23)
	PExp6 -> PExp6 PExp7                               (24)
	PExp6 -> PExp7                                     (25)
	PExp7 -> 'True'                                    (26)
	PExp7 -> 'False'                                   (27)
	PExp7 -> Ident                                     (28)
	PExp7 -> '(' PExp ')'                              (29)
	PExp4 -> PExp5                                     (30)
	PLabExp -> Ident ':' PExp                          (31)
	ListPLabExp ->                                     (32)
	ListPLabExp -> PLabExp                             (33)
	ListPLabExp -> PLabExp ',' ListPLabExp             (34)
	PCaseExp -> Ident Ident '->' PExp                  (35)
	ListPCaseExp ->                                    (36)
	ListPCaseExp -> PCaseExp                           (37)
	ListPCaseExp -> PCaseExp ',' ListPCaseExp          (38)
	PTyp -> 'Bool'                                     (39)
	PTyp -> Ident                                      (40)
	PTyp -> 'Arr' PTyp PTyp                            (41)
	PTyp -> 'Dist' PTyp                                (42)
	PTyp -> '<' ListTMember '>'                        (43)
	PTyp -> '{' ListTMember1 '}'                       (44)
	PTyp -> 'forall' Ident '.' PTyp                    (45)
	PTyp -> 'my' Ident '.' PTyp                        (46)
	TMember -> Ident ':' PTyp                          (47)
	ListTMember ->                                     (48)
	ListTMember -> TMember                             (49)
	ListTMember -> TMember ',' ListTMember             (50)
	TMember1 -> Ident ':' PTyp                         (51)
	ListTMember1 -> TMember1                           (52)
	ListTMember1 -> TMember1 '|' ListTMember1          (53)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	'+'            { PT _ (TS _ 3) }
	','            { PT _ (TS _ 4) }
	'->'           { PT _ (TS _ 5) }
	'.'            { PT _ (TS _ 6) }
	'/\\'          { PT _ (TS _ 7) }
	':'            { PT _ (TS _ 8) }
	';'            { PT _ (TS _ 9) }
	'<'            { PT _ (TS _ 10) }
	'='            { PT _ (TS _ 11) }
	'=>'           { PT _ (TS _ 12) }
	'>'            { PT _ (TS _ 13) }
	'Arr'          { PT _ (TS _ 14) }
	'Bool'         { PT _ (TS _ 15) }
	'Dist'         { PT _ (TS _ 16) }
	'False'        { PT _ (TS _ 17) }
	'True'         { PT _ (TS _ 18) }
	'['            { PT _ (TS _ 19) }
	'\\'           { PT _ (TS _ 20) }
	']'            { PT _ (TS _ 21) }
	'case'         { PT _ (TS _ 22) }
	'distr'        { PT _ (TS _ 23) }
	'else'         { PT _ (TS _ 24) }
	'filter'       { PT _ (TS _ 25) }
	'forall'       { PT _ (TS _ 26) }
	'if'           { PT _ (TS _ 27) }
	'in'           { PT _ (TS _ 28) }
	'inj'          { PT _ (TS _ 29) }
	'my'           { PT _ (TS _ 30) }
	'of'           { PT _ (TS _ 31) }
	'return'       { PT _ (TS _ 32) }
	'then'         { PT _ (TS _ 33) }
	'{'            { PT _ (TS _ 34) }
	'|'            { PT _ (TS _ 35) }
	'}'            { PT _ (TS _ 36) }
	'~'            { PT _ (TS _ 37) }
	L_Ident        { PT _ (TV $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pGen     rule  0
	Ident           rule  1
	Gen             rule  2
	ListPExp        rules 3, 4
	PExp            rules 5, 6, 7, 8, 9
	PExp1           rules 10, 11, 12
	PExp2           rules 13, 14
	PExp3           rules 15, 16, 17
	PExp5           rules 18, 19, 20
	PExp6           rules 21, 22, 23, 24, 25
	PExp7           rules 26, 27, 28, 29
	PExp4           rule  30
	PLabExp         rule  31
	ListPLabExp     rules 32, 33, 34
	PCaseExp        rule  35
	ListPCaseExp    rules 36, 37, 38
	PTyp            rules 39, 40, 41, 42, 43, 44, 45, 46
	TMember         rule  47
	ListTMember     rules 48, 49, 50
	TMember1        rule  51
	ListTMember1    rules 52, 53

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pGen -> . Gen                                (rule 0)

	'('            shift, and enter state 14
	'/\\'          shift, and enter state 15
	'<'            shift, and enter state 16
	'False'        shift, and enter state 17
	'True'         shift, and enter state 18
	'\\'           shift, and enter state 19
	'case'         shift, and enter state 20
	'distr'        shift, and enter state 21
	'filter'       shift, and enter state 22
	'if'           shift, and enter state 23
	'inj'          shift, and enter state 24
	'return'       shift, and enter state 25
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	Gen            goto state 4
	ListPExp       goto state 5
	PExp           goto state 6
	PExp1          goto state 7
	PExp2          goto state 8
	PExp3          goto state 9
	PExp5          goto state 10
	PExp6          goto state 11
	PExp7          goto state 12
	PExp4          goto state 13

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'('            reduce using rule 1
	')'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'->'           reduce using rule 1
	'.'            reduce using rule 1
	':'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'='            reduce using rule 1
	'=>'           reduce using rule 1
	'>'            reduce using rule 1
	'Arr'          reduce using rule 1
	'Bool'         reduce using rule 1
	'Dist'         reduce using rule 1
	'False'        reduce using rule 1
	'True'         reduce using rule 1
	'['            reduce using rule 1
	']'            reduce using rule 1
	'else'         reduce using rule 1
	'forall'       reduce using rule 1
	'in'           reduce using rule 1
	'my'           reduce using rule 1
	'of'           reduce using rule 1
	'then'         reduce using rule 1
	'{'            reduce using rule 1
	'|'            reduce using rule 1
	'}'            reduce using rule 1
	'~'            reduce using rule 1
	L_Ident        reduce using rule 1
	%eof           reduce using rule 1


State 3

	PExp -> Ident . '=' PExp1 'in' PExp                 (rule 5)
	PExp -> Ident . '~' PExp1 'in' PExp                 (rule 6)
	PExp7 -> Ident .                                    (rule 28)

	'('            reduce using rule 28
	')'            reduce using rule 28
	'+'            reduce using rule 28
	','            reduce using rule 28
	'.'            reduce using rule 28
	';'            reduce using rule 28
	'='            shift, and enter state 52
	'>'            reduce using rule 28
	'False'        reduce using rule 28
	'True'         reduce using rule 28
	'['            reduce using rule 28
	'else'         reduce using rule 28
	'of'           reduce using rule 28
	'then'         reduce using rule 28
	'}'            reduce using rule 28
	'~'            shift, and enter state 53
	L_Ident        reduce using rule 28
	%eof           reduce using rule 28


State 4

	%start_pGen -> Gen .                                (rule 0)

	%eof           accept


State 5

	Gen -> ListPExp .                                   (rule 2)

	%eof           reduce using rule 2


State 6

	ListPExp -> PExp .                                  (rule 3)
	ListPExp -> PExp . ';' ListPExp                     (rule 4)

	';'            shift, and enter state 51
	%eof           reduce using rule 3


State 7

	PExp -> PExp1 .                                     (rule 9)

	')'            reduce using rule 9
	','            reduce using rule 9
	';'            reduce using rule 9
	'>'            reduce using rule 9
	'else'         reduce using rule 9
	'of'           reduce using rule 9
	'then'         reduce using rule 9
	'}'            reduce using rule 9
	%eof           reduce using rule 9


State 8

	PExp1 -> PExp2 .                                    (rule 12)
	PExp2 -> PExp2 . '+' PExp3                          (rule 13)

	')'            reduce using rule 12
	'+'            shift, and enter state 50
	','            reduce using rule 12
	';'            reduce using rule 12
	'>'            reduce using rule 12
	'else'         reduce using rule 12
	'in'           reduce using rule 12
	'of'           reduce using rule 12
	'then'         reduce using rule 12
	'}'            reduce using rule 12
	%eof           reduce using rule 12


State 9

	PExp2 -> PExp3 .                                    (rule 14)

	')'            reduce using rule 14
	'+'            reduce using rule 14
	','            reduce using rule 14
	';'            reduce using rule 14
	'>'            reduce using rule 14
	'else'         reduce using rule 14
	'in'           reduce using rule 14
	'of'           reduce using rule 14
	'then'         reduce using rule 14
	'}'            reduce using rule 14
	%eof           reduce using rule 14


State 10

	PExp5 -> PExp5 . '.' Ident                          (rule 18)
	PExp4 -> PExp5 .                                    (rule 30)

	')'            reduce using rule 30
	'+'            reduce using rule 30
	','            reduce using rule 30
	'.'            shift, and enter state 49
	';'            reduce using rule 30
	'>'            reduce using rule 30
	'else'         reduce using rule 30
	'in'           reduce using rule 30
	'of'           reduce using rule 30
	'then'         reduce using rule 30
	'}'            reduce using rule 30
	%eof           reduce using rule 30


State 11

	PExp5 -> PExp6 . '[' PTyp ']'                       (rule 19)
	PExp5 -> PExp6 .                                    (rule 20)
	PExp6 -> PExp6 . PExp7                              (rule 24)

	'('            shift, and enter state 14
	')'            reduce using rule 20
	'+'            reduce using rule 20
	','            reduce using rule 20
	'.'            reduce using rule 20
	';'            reduce using rule 20
	'>'            reduce using rule 20
	'False'        shift, and enter state 17
	'True'         shift, and enter state 18
	'['            shift, and enter state 48
	'else'         reduce using rule 20
	'in'           reduce using rule 20
	'of'           reduce using rule 20
	'then'         reduce using rule 20
	'}'            reduce using rule 20
	L_Ident        shift, and enter state 2
	%eof           reduce using rule 20

	Ident          goto state 26
	PExp7          goto state 47

State 12

	PExp6 -> PExp7 .                                    (rule 25)

	'('            reduce using rule 25
	')'            reduce using rule 25
	'+'            reduce using rule 25
	','            reduce using rule 25
	'.'            reduce using rule 25
	';'            reduce using rule 25
	'>'            reduce using rule 25
	'False'        reduce using rule 25
	'True'         reduce using rule 25
	'['            reduce using rule 25
	'else'         reduce using rule 25
	'in'           reduce using rule 25
	'of'           reduce using rule 25
	'then'         reduce using rule 25
	'}'            reduce using rule 25
	L_Ident        reduce using rule 25
	%eof           reduce using rule 25


State 13

	PExp3 -> PExp4 .                                    (rule 17)

	')'            reduce using rule 17
	'+'            reduce using rule 17
	','            reduce using rule 17
	';'            reduce using rule 17
	'>'            reduce using rule 17
	'else'         reduce using rule 17
	'in'           reduce using rule 17
	'of'           reduce using rule 17
	'then'         reduce using rule 17
	'}'            reduce using rule 17
	%eof           reduce using rule 17


State 14

	PExp7 -> '(' . PExp ')'                             (rule 29)

	'('            shift, and enter state 14
	'/\\'          shift, and enter state 15
	'<'            shift, and enter state 16
	'False'        shift, and enter state 17
	'True'         shift, and enter state 18
	'\\'           shift, and enter state 19
	'case'         shift, and enter state 20
	'distr'        shift, and enter state 21
	'filter'       shift, and enter state 22
	'if'           shift, and enter state 23
	'inj'          shift, and enter state 24
	'return'       shift, and enter state 25
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	PExp           goto state 46
	PExp1          goto state 7
	PExp2          goto state 8
	PExp3          goto state 9
	PExp5          goto state 10
	PExp6          goto state 11
	PExp7          goto state 12
	PExp4          goto state 13

State 15

	PExp1 -> '/\\' . Ident '=>' PExp1                   (rule 11)

	L_Ident        shift, and enter state 2

	Ident          goto state 45

State 16

	PExp6 -> '<' . ListPLabExp '>'                      (rule 21)

	'>'            reduce using rule 32
	L_Ident        shift, and enter state 2

	Ident          goto state 42
	PLabExp        goto state 43
	ListPLabExp    goto state 44

State 17

	PExp7 -> 'False' .                                  (rule 27)

	'('            reduce using rule 27
	')'            reduce using rule 27
	'+'            reduce using rule 27
	','            reduce using rule 27
	'.'            reduce using rule 27
	';'            reduce using rule 27
	'>'            reduce using rule 27
	'False'        reduce using rule 27
	'True'         reduce using rule 27
	'['            reduce using rule 27
	'else'         reduce using rule 27
	'in'           reduce using rule 27
	'of'           reduce using rule 27
	'then'         reduce using rule 27
	'}'            reduce using rule 27
	L_Ident        reduce using rule 27
	%eof           reduce using rule 27


State 18

	PExp7 -> 'True' .                                   (rule 26)

	'('            reduce using rule 26
	')'            reduce using rule 26
	'+'            reduce using rule 26
	','            reduce using rule 26
	'.'            reduce using rule 26
	';'            reduce using rule 26
	'>'            reduce using rule 26
	'False'        reduce using rule 26
	'True'         reduce using rule 26
	'['            reduce using rule 26
	'else'         reduce using rule 26
	'in'           reduce using rule 26
	'of'           reduce using rule 26
	'then'         reduce using rule 26
	'}'            reduce using rule 26
	L_Ident        reduce using rule 26
	%eof           reduce using rule 26


State 19

	PExp1 -> '\\' . Ident '->' PExp1                    (rule 10)

	L_Ident        shift, and enter state 2

	Ident          goto state 41

State 20

	PExp6 -> 'case' . PExp 'of' PTyp '{' ListPCaseExp '}'    (rule 23)

	'('            shift, and enter state 14
	'/\\'          shift, and enter state 15
	'<'            shift, and enter state 16
	'False'        shift, and enter state 17
	'True'         shift, and enter state 18
	'\\'           shift, and enter state 19
	'case'         shift, and enter state 20
	'distr'        shift, and enter state 21
	'filter'       shift, and enter state 22
	'if'           shift, and enter state 23
	'inj'          shift, and enter state 24
	'return'       shift, and enter state 25
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	PExp           goto state 40
	PExp1          goto state 7
	PExp2          goto state 8
	PExp3          goto state 9
	PExp5          goto state 10
	PExp6          goto state 11
	PExp7          goto state 12
	PExp4          goto state 13

State 21

	PExp3 -> 'distr' . PTyp                             (rule 16)

	'<'            shift, and enter state 30
	'Arr'          shift, and enter state 31
	'Bool'         shift, and enter state 32
	'Dist'         shift, and enter state 33
	'forall'       shift, and enter state 34
	'my'           shift, and enter state 35
	'{'            shift, and enter state 36
	L_Ident        shift, and enter state 2

	Ident          goto state 28
	PTyp           goto state 39

State 22

	PExp -> 'filter' . PExp6 'in' PExp                  (rule 8)

	'('            shift, and enter state 14
	'<'            shift, and enter state 16
	'False'        shift, and enter state 17
	'True'         shift, and enter state 18
	'case'         shift, and enter state 20
	'inj'          shift, and enter state 24
	L_Ident        shift, and enter state 2

	Ident          goto state 26
	PExp6          goto state 38
	PExp7          goto state 12

State 23

	PExp -> 'if' . PExp 'then' PExp 'else' PExp         (rule 7)

	'('            shift, and enter state 14
	'/\\'          shift, and enter state 15
	'<'            shift, and enter state 16
	'False'        shift, and enter state 17
	'True'         shift, and enter state 18
	'\\'           shift, and enter state 19
	'case'         shift, and enter state 20
	'distr'        shift, and enter state 21
	'filter'       shift, and enter state 22
	'if'           shift, and enter state 23
	'inj'          shift, and enter state 24
	'return'       shift, and enter state 25
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	PExp           goto state 37
	PExp1          goto state 7
	PExp2          goto state 8
	PExp3          goto state 9
	PExp5          goto state 10
	PExp6          goto state 11
	PExp7          goto state 12
	PExp4          goto state 13

State 24

	PExp6 -> 'inj' . PTyp '{' PLabExp '}'               (rule 22)

	'<'            shift, and enter state 30
	'Arr'          shift, and enter state 31
	'Bool'         shift, and enter state 32
	'Dist'         shift, and enter state 33
	'forall'       shift, and enter state 34
	'my'           shift, and enter state 35
	'{'            shift, and enter state 36
	L_Ident        shift, and enter state 2

	Ident          goto state 28
	PTyp           goto state 29

State 25

	PExp3 -> 'return' . PExp4                           (rule 15)

	'('            shift, and enter state 14
	'<'            shift, and enter state 16
	'False'        shift, and enter state 17
	'True'         shift, and enter state 18
	'case'         shift, and enter state 20
	'inj'          shift, and enter state 24
	L_Ident        shift, and enter state 2

	Ident          goto state 26
	PExp5          goto state 10
	PExp6          goto state 11
	PExp7          goto state 12
	PExp4          goto state 27

State 26

	PExp7 -> Ident .                                    (rule 28)

	'('            reduce using rule 28
	')'            reduce using rule 28
	'+'            reduce using rule 28
	','            reduce using rule 28
	'.'            reduce using rule 28
	';'            reduce using rule 28
	'>'            reduce using rule 28
	'False'        reduce using rule 28
	'True'         reduce using rule 28
	'['            reduce using rule 28
	'else'         reduce using rule 28
	'in'           reduce using rule 28
	'of'           reduce using rule 28
	'then'         reduce using rule 28
	'}'            reduce using rule 28
	L_Ident        reduce using rule 28
	%eof           reduce using rule 28


State 27

	PExp3 -> 'return' PExp4 .                           (rule 15)

	')'            reduce using rule 15
	'+'            reduce using rule 15
	','            reduce using rule 15
	';'            reduce using rule 15
	'>'            reduce using rule 15
	'else'         reduce using rule 15
	'in'           reduce using rule 15
	'of'           reduce using rule 15
	'then'         reduce using rule 15
	'}'            reduce using rule 15
	%eof           reduce using rule 15


State 28

	PTyp -> Ident .                                     (rule 40)

	')'            reduce using rule 40
	'+'            reduce using rule 40
	','            reduce using rule 40
	';'            reduce using rule 40
	'<'            reduce using rule 40
	'>'            reduce using rule 40
	'Arr'          reduce using rule 40
	'Bool'         reduce using rule 40
	'Dist'         reduce using rule 40
	']'            reduce using rule 40
	'else'         reduce using rule 40
	'forall'       reduce using rule 40
	'in'           reduce using rule 40
	'my'           reduce using rule 40
	'of'           reduce using rule 40
	'then'         reduce using rule 40
	'{'            reduce using rule 40
	'|'            reduce using rule 40
	'}'            reduce using rule 40
	L_Ident        reduce using rule 40
	%eof           reduce using rule 40


State 29

	PExp6 -> 'inj' PTyp . '{' PLabExp '}'               (rule 22)

	'{'            shift, and enter state 79


State 30

	PTyp -> '<' . ListTMember '>'                       (rule 43)

	'>'            reduce using rule 48
	L_Ident        shift, and enter state 2

	Ident          goto state 76
	TMember        goto state 77
	ListTMember    goto state 78

State 31

	PTyp -> 'Arr' . PTyp PTyp                           (rule 41)

	'<'            shift, and enter state 30
	'Arr'          shift, and enter state 31
	'Bool'         shift, and enter state 32
	'Dist'         shift, and enter state 33
	'forall'       shift, and enter state 34
	'my'           shift, and enter state 35
	'{'            shift, and enter state 36
	L_Ident        shift, and enter state 2

	Ident          goto state 28
	PTyp           goto state 75

State 32

	PTyp -> 'Bool' .                                    (rule 39)

	')'            reduce using rule 39
	'+'            reduce using rule 39
	','            reduce using rule 39
	';'            reduce using rule 39
	'<'            reduce using rule 39
	'>'            reduce using rule 39
	'Arr'          reduce using rule 39
	'Bool'         reduce using rule 39
	'Dist'         reduce using rule 39
	']'            reduce using rule 39
	'else'         reduce using rule 39
	'forall'       reduce using rule 39
	'in'           reduce using rule 39
	'my'           reduce using rule 39
	'of'           reduce using rule 39
	'then'         reduce using rule 39
	'{'            reduce using rule 39
	'|'            reduce using rule 39
	'}'            reduce using rule 39
	L_Ident        reduce using rule 39
	%eof           reduce using rule 39


State 33

	PTyp -> 'Dist' . PTyp                               (rule 42)

	'<'            shift, and enter state 30
	'Arr'          shift, and enter state 31
	'Bool'         shift, and enter state 32
	'Dist'         shift, and enter state 33
	'forall'       shift, and enter state 34
	'my'           shift, and enter state 35
	'{'            shift, and enter state 36
	L_Ident        shift, and enter state 2

	Ident          goto state 28
	PTyp           goto state 74

State 34

	PTyp -> 'forall' . Ident '.' PTyp                   (rule 45)

	L_Ident        shift, and enter state 2

	Ident          goto state 73

State 35

	PTyp -> 'my' . Ident '.' PTyp                       (rule 46)

	L_Ident        shift, and enter state 2

	Ident          goto state 72

State 36

	PTyp -> '{' . ListTMember1 '}'                      (rule 44)

	L_Ident        shift, and enter state 2

	Ident          goto state 69
	TMember1       goto state 70
	ListTMember1   goto state 71

State 37

	PExp -> 'if' PExp . 'then' PExp 'else' PExp         (rule 7)

	'then'         shift, and enter state 68


State 38

	PExp -> 'filter' PExp6 . 'in' PExp                  (rule 8)
	PExp6 -> PExp6 . PExp7                              (rule 24)

	'('            shift, and enter state 14
	'False'        shift, and enter state 17
	'True'         shift, and enter state 18
	'in'           shift, and enter state 67
	L_Ident        shift, and enter state 2

	Ident          goto state 26
	PExp7          goto state 47

State 39

	PExp3 -> 'distr' PTyp .                             (rule 16)

	')'            reduce using rule 16
	'+'            reduce using rule 16
	','            reduce using rule 16
	';'            reduce using rule 16
	'>'            reduce using rule 16
	'else'         reduce using rule 16
	'in'           reduce using rule 16
	'of'           reduce using rule 16
	'then'         reduce using rule 16
	'}'            reduce using rule 16
	%eof           reduce using rule 16


State 40

	PExp6 -> 'case' PExp . 'of' PTyp '{' ListPCaseExp '}'    (rule 23)

	'of'           shift, and enter state 66


State 41

	PExp1 -> '\\' Ident . '->' PExp1                    (rule 10)

	'->'           shift, and enter state 65


State 42

	PLabExp -> Ident . ':' PExp                         (rule 31)

	':'            shift, and enter state 64


State 43

	ListPLabExp -> PLabExp .                            (rule 33)
	ListPLabExp -> PLabExp . ',' ListPLabExp            (rule 34)

	','            shift, and enter state 63
	'>'            reduce using rule 33


State 44

	PExp6 -> '<' ListPLabExp . '>'                      (rule 21)

	'>'            shift, and enter state 62


State 45

	PExp1 -> '/\\' Ident . '=>' PExp1                   (rule 11)

	'=>'           shift, and enter state 61


State 46

	PExp7 -> '(' PExp . ')'                             (rule 29)

	')'            shift, and enter state 60


State 47

	PExp6 -> PExp6 PExp7 .                              (rule 24)

	'('            reduce using rule 24
	')'            reduce using rule 24
	'+'            reduce using rule 24
	','            reduce using rule 24
	'.'            reduce using rule 24
	';'            reduce using rule 24
	'>'            reduce using rule 24
	'False'        reduce using rule 24
	'True'         reduce using rule 24
	'['            reduce using rule 24
	'else'         reduce using rule 24
	'in'           reduce using rule 24
	'of'           reduce using rule 24
	'then'         reduce using rule 24
	'}'            reduce using rule 24
	L_Ident        reduce using rule 24
	%eof           reduce using rule 24


State 48

	PExp5 -> PExp6 '[' . PTyp ']'                       (rule 19)

	'<'            shift, and enter state 30
	'Arr'          shift, and enter state 31
	'Bool'         shift, and enter state 32
	'Dist'         shift, and enter state 33
	'forall'       shift, and enter state 34
	'my'           shift, and enter state 35
	'{'            shift, and enter state 36
	L_Ident        shift, and enter state 2

	Ident          goto state 28
	PTyp           goto state 59

State 49

	PExp5 -> PExp5 '.' . Ident                          (rule 18)

	L_Ident        shift, and enter state 2

	Ident          goto state 58

State 50

	PExp2 -> PExp2 '+' . PExp3                          (rule 13)

	'('            shift, and enter state 14
	'<'            shift, and enter state 16
	'False'        shift, and enter state 17
	'True'         shift, and enter state 18
	'case'         shift, and enter state 20
	'distr'        shift, and enter state 21
	'inj'          shift, and enter state 24
	'return'       shift, and enter state 25
	L_Ident        shift, and enter state 2

	Ident          goto state 26
	PExp3          goto state 57
	PExp5          goto state 10
	PExp6          goto state 11
	PExp7          goto state 12
	PExp4          goto state 13

State 51

	ListPExp -> PExp ';' . ListPExp                     (rule 4)
